--- a/ABParse.Tests.Debugging/ABParse.Tests.Debugging.csproj
+++ b/ABParse.Tests.Debugging/ABParse.Tests.Debugging.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DemoParser.cs" />
+    <Compile Include="JsonParser.cs" />
     <Compile Include="PerformanceTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
