--- a/ABParse.Tests.Debugging/ABParse.Tests.Debugging.csproj
+++ b/ABParse.Tests.Debugging/ABParse.Tests.Debugging.csproj
@@ -43,8 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DemoParser.cs" />
-    <Compile Include="JsonParser.cs" />
-    <Compile Include="PerformanceTests.cs" />
+    <Compile Include="Other\JsonParser.cs" />
+    <Compile Include="Other\PerformanceTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
