--- a/ABParse/ABParse.nuspec
+++ b/ABParse/ABParse.nuspec
@@ -2,16 +2,17 @@
 <package >
   <metadata>
     <id>ABParse</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <title>ABParse</title>
     <authors>ABPerson</authors>
     <owners>ABPerson</owners>
-	<licenseUrl>https://github.com/ABSoftwareOfficial/ABParser/blob/master/LICENSE</licenseUrl>
+	<licenseUrl>https://raw.githubusercontent.com/ABSoftwareOfficial/ABParser/master/LICENSE</licenseUrl>
 	<projectUrl>https://github.com/ABSoftwareOfficial/ABParser</projectUrl>
+	<iconUrl>https://github.com/ABSoftwareOfficial/ABParser/raw/master/ABParse/nuget_icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A simple library which provides support for creating parsers to parse strings. </description>
-    <releaseNotes></releaseNotes>
-    <copyright>Copyright (C) Alex Burrows 2018</copyright>
-    <tags></tags>
+    <description>A simple library which provides support for creating parsers to parse strings. (A tutorial is coming soon)</description>
+    <releaseNotes>This release fixes issues with multi-character tokens.</releaseNotes>
+    <copyright>Copyright © Alex Burrows 2018</copyright>
+    <tags>parsing parser string-parser strings make-your-own-parser any-parser easy-parser ABParse ABSoftware ABWorld</tags>
   </metadata>
 </package>
