--- a/ABParse/ABParse.nuspec
+++ b/ABParse/ABParse.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>ABParse</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <title>ABParse</title>
     <authors>ABPerson</authors>
     <owners>ABPerson</owners>
@@ -11,8 +11,8 @@
 	<iconUrl>https://github.com/ABSoftwareOfficial/ABParser/raw/master/ABParse/nuget_icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>A simple library which provides support for creating parsers to parse strings. A tutorial is available at: https://www.youtube.com/watch?v=lYWWJm3OjMQ </description>
-    <releaseNotes>Added tutorial and made IgnoreWhitespace not readonly.</releaseNotes>
+    <releaseNotes>Lower Namespace + Remove Unneeded References.</releaseNotes>
     <copyright>Copyright © Alex Burrows 2018</copyright>
-    <tags>parsing parser string-parser strings make-your-own-parser any-parser easy-parser ABParse ABSoftware ABWorld</tags>
+    <tags>parsing parser string-parser strings make-your-own-parser any-parser easy-parser can-be-json-parser custom-parser parsing-utility ABParse ABSoftware ABWorld</tags>
   </metadata>
 </package>
